# Lecoo-Control-Center

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_CN.md  README_RU.md  release.toml
.cargo/: config.toml
.github/workflows/: release.yml
cli/locales/: cn.yml  en.yml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: handlers.rs  main.rs
daemon/src/ec/: mod.rs  offsets.rs  sys_linux.rs  sys_windows.rs
daemon/src/ec/hw/: fan.rs  flexicharger.rs  getters.rs  kbd_backlight.rs  led.rs  mod.rs  n161a_charge_hold.rs  power_profile.rs
daemon/src/handlers/: flexicharger.rs  getters.rs  kbd_backlight.rs  led.rs  mod.rs  power_profile.rs
daemon/src/services/: mod.rs  systemd_service.rs  win_service.rs
daemon/src/telemetry/: mod.rs
ipc/: Cargo.toml
ipc/src/: client.rs  lib.rs  server.rs  structs.rs
scripts/linux/: install.sh  uninstall.sh
scripts/windows/: install.bat  uninstall.bat
telemetry_server/: Cargo.toml
telemetry_server/src/: main.rs
